new context and wake word files

--- a/ChessCore/ChessCore.csproj
+++ b/ChessCore/ChessCore.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="OpenTK" Version="4.3.0" />
+    <PackageReference Include="OpenTK" Version="4.4.0" />
     <PackageReference Include="Picovoice" Version="1.1.0" />
   </ItemGroup>
 
@@ -28,6 +28,15 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="chess_windows.rhn">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="pico_chess_linux.ppn">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="pico_chess_mac.ppn">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="pico_chess_windows.ppn">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
